Checkbox design breaks on zoom; Fixed

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -113,7 +113,7 @@ div.tasks-component div.task-body div.task {
 }
 
 div.tasks-component div.task-body div.task div.task-checkbox {
-  width: 20px;
+  min-width: 20px;
   height: 20px;
   background-color: #444;
   border-radius: 20px;
